2015-12-01  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #19313]
	* bits/typesizes.h (__CPU_MASK_TYPE): New.
	* sysdeps/mach/hurd/bits/typesizes.h (__CPU_MASK_TYPE): Likewise.
	* sysdeps/nacl/bits/typesizes.h (__CPU_MASK_TYPE): Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/typesizes.h (__CPU_MASK_TYPE):
	Likewise.
	* sysdeps/unix/sysv/linux/generic/bits/typesizes.h (__CPU_MASK_TYPE):
	Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/typesizes.h (__CPU_MASK_TYPE):
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/typesizes.h (__CPU_MASK_TYPE):
	Likewise.
	* sysdeps/unix/sysv/linux/x86/bits/typesizes.h (__CPU_MASK_TYPE):
	* sysdeps/unix/sysv/linux/bits/sched.h (__cpu_mask): Replace
	unsigned long int with __CPU_MASK_TYPE.

2015-12-01  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* sysdeps/aarch64/libm-test-ulps: Regenerated.

2015-12-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/dbl-64/e_sqrt.c: Do not include uroot.h.
	(__ieee754_sqrt): Use hex float constants instead of tm256.x and
	t512.x.
	* sysdeps/ieee754/dbl-64/uroot.h: Remove file.

2015-11-30  Amit Pawar  <amit.pawar@amd.com>

	[BZ #19214]
	* sysdeps/x86/cpu-features.c (get_common_indeces): Add an
	argument to return extended model.  Update family and model
	with extended family and model when family == 0x0f.
	(init_cpu_features): Updated.

2015-11-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	The RPC interface used by mmap uses the unsigned vm_offset_t, not the
	signed off_t, so 32bit bigger than 2GiB values are fine actually.

	* sysdeps/mach/hurd/mmap64.c: New file.

2015-11-29  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/mach/hurd/fork.c (__fork): Install correct number of send
	rights for its main user thread in NEWTASK.

2015-11-28  Maciej W. Rozycki  <macro@imgtec.com>

	* sysdeps/mips/fpu_control.h (_FPU_RESERVED): Include ABS2008.
	(_FPU_DEFAULT, _FPU_IEEE) [__mips_nan2008]: Set ABS2008.

2015-11-27  Carlos O'Donell  <carlos@redhat.com>

	[BZ #14259]